add conclusion skeleton

--- a/src/app/pages/conclusion/conclusion.component.html
+++ b/src/app/pages/conclusion/conclusion.component.html
@@ -1,1 +1,38 @@
-<p>conclusion works!</p>
+<app-slideshow-section>
+
+    <ng-template>
+      <div class="slide-content">
+        <div class="split-slide">
+          <div class="text-column">
+            <h1>Conclusion</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, accusantium nostrum maiores quibusdam
+              ratione quo vitae dolorum sapiente consequuntur tempora voluptatem temporibus! Molestias quam mollitia optio
+              voluptate aut exercitationem architecto.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate reprehenderit dicta eveniet perferendis
+              et nostrum excepturi, quia repudiandae sapiente, recusandae earum corporis suscipit nemo accusantium sed ad
+              tenetur. Tempore, quam.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, accusantium nostrum maiores quibusdam
+              ratione quo vitae dolorum sapiente consequuntur tempora voluptatem temporibus! Molestias quam mollitia optio
+              voluptate aut exercitationem architecto.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate reprehenderit dicta eveniet perferendis
+              et nostrum excepturi, quia repudiandae sapiente, recusandae earum corporis suscipit nemo accusantium sed ad
+              tenetur. Tempore, quam.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, accusantium nostrum maiores quibusdam
+              ratione quo vitae dolorum sapiente consequuntur tempora voluptatem temporibus! Molestias quam mollitia optio
+              voluptate aut exercitationem architecto.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate reprehenderit dicta eveniet perferendis
+              et nostrum excepturi, quia repudiandae sapiente, recusandae earum corporis suscipit nemo accusantium sed ad
+              tenetur. Tempore, quam.
+            </p>
+          </div>
+      </div>
+      </div>
+    </ng-template>
+  
+  
+  </app-slideshow-section>
