fix lottie. fix semi-supervised image. add remaining navigation buttons

--- a/src/app/pages/gradcam/gradcam.component.html
+++ b/src/app/pages/gradcam/gradcam.component.html
@@ -75,6 +75,11 @@
             et nostrum excepturi, quia repudiandae sapiente, recusandae earum corporis suscipit nemo accusantium sed ad
             tenetur. Tempore, quam.
           </p>
+          <div class="next-btn-div">
+            <button class="next-btn" (click)="goNext()">
+              Conclusion <span class="arrow">→</span>
+            </button>
+          </div>
         </div>
         <div class="image-column">
           <div class="gradcam-wrapper">
