--- a/src/app/pages/yolo-cls/yolo-cls.component.html
+++ b/src/app/pages/yolo-cls/yolo-cls.component.html
@@ -115,12 +115,15 @@
             interior and the background of the part. The Roboflow tool is employed to label the regions of the image
             corresponding to the part. </p>
         </div>
-        <div class="grid-wrapper">
+        <!-- <div class="grid-wrapper">
           <div class="image-grid_2">
             <img src="assets/images/semisupervised/semisupervised_flow1.svg" alt="Semi Supervised Flow" />
             <img src="assets/images/semisupervised/semisupervised_flow2.svg" alt="Semi Supervised Flow" />
             <img src="assets/images/semisupervised/semisupervised_flow3.svg" alt="Semi Supervised Flow" />
           </div>
+        </div> -->
+        <div class="image-column">
+          <img src="assets/images/semisupervised/scatter2.png" alt="Model Diagram" />
         </div>
       </div>
     </div>
