--- a/src/app/components/nav-header/nav-header.component.html
+++ b/src/app/components/nav-header/nav-header.component.html
@@ -1,6 +1,5 @@
 <header class="nav-header flex-header">
-  <dotlottie-wc #lottiePlayer class="lottie-logo"
-    src="https://lottie.host/94ea7068-decd-41dd-b813-fd144462a294/CNUu7tjtaP.lottie" autoplay loop mode="bounce"
+  <dotlottie-wc #lottiePlayer class="lottie-logo" src="assets/lottie/logo.lottie" autoplay loop mode="bounce"
     (click)="goHome()"></dotlottie-wc>
 
   <div class="nav-separator"></div>
